feat: Phase 0 — production foundation
- Flyway migrations replacing ddl-auto:update in both services
  (flyway_schema_history_bot / flyway_schema_history_ingestor for isolation)
- pgvector HNSW index (m=16, ef_construction=64) for sub-second vector search at scale
- answer_feedback table stub ready for Phase 1
- Inline retry with exponential backoff (3 attempts) on all LLM + embedding calls
- Spring Boot Actuator health/prometheus endpoints (/actuator/health, /actuator/prometheus)
- Micrometer + Prometheus metrics export
- Structured JSON logging via logstash-logback-encoder (prod profile); colored dev output
- @RestControllerAdvice GlobalExceptionHandler — consistent ErrorResponse on both services
- Bucket4j per-user rate limiting on /api/chat/query (30 req/min, configurable)
- Config-driven CORS whitelist replacing allowedOriginPatterns("*")
- /actuator/**, /v3/api-docs/**, /swagger-ui/** made public in SecurityConfig
- SpringDoc OpenAPI (Swagger UI) added to both services
- Production docker-compose.prod.yml with named volumes and health checks
- .env.example with all required variables documentd.

Please enter the commit message for your changes. Lines starting